kubernetes/nginx-ingress-controller.yaml
# nginx ingress service
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-lb
  namespace: finfini
  labels:
    app: nginx-ingress-lb
  annotations:
    # set loadbalancer to the specified slb id
    # set loadbalancer address type to intranet if using private slb instance
    #service.beta.kubernetes.io/alicloud-loadbalancer-address-type: intranet
    service.beta.kubernetes.io/alicloud-loadbalancer-force-override-listeners: 'true'
spec:
  type: LoadBalancer
  externalIPs:
  # do not route traffic to other nodes
  # and reserve client ip for upstream
  externalTrafficPolicy: "Local"
  ports:	
  - port: 80
    name: http
    targetPort: 80
  - port: 443
    name: https
    targetPort: 443
  selector:
    # select app=ingress-nginx pods
    app: ingress-nginx-finfini
---
# nginx ingress pods
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller-finfini
  labels:
    app: ingress-nginx-finfini
  namespace: finfini
  annotations:
    component.version: '0.22.0'
    component.revision: '5'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-nginx-finfini
  template:
    metadata:
      labels:
        app: ingress-nginx-finfini
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
      annotations:
        prometheus.io/port: "10254"
        prometheus.io/scrape: "true"
    spec:
      #tolerations:
      #  - key: node-role.kubernetes.io/master
      #    effect: NoSchedule
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - ingress-nginx-finfini
              topologyKey: "kubernetes.io/hostname"
      serviceAccountName: nginx-ingress-controller-finfini
      containers:
      - name: nginx-ingress-controller-finfini
        image: registry.cn-hangzhou.aliyuncs.com/acs/aliyun-ingress-controller:v0.22.0.5-552e0db-aliyun
        args:
          - /nginx-ingress-controller
          - --configmap=$(POD_NAMESPACE)/nginx-configuration-finfini
          - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services
          - --udp-services-configmap=$(POD_NAMESPACE)/udp-services
          - --annotations-prefix=nginx.ingress.kubernetes.io
          - --publish-service=$(POD_NAMESPACE)/nginx-ingress-lb
          - --ingress-class=finfini
          - --v=2
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        securityContext:
          capabilities:
              drop:
              - ALL
              add:
              - NET_BIND_SERVICE
          runAsUser: 33
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
      nodeSelector:
        beta.kubernetes.io/os: linux
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
